# wifi-densepose

rust-port/wifi-densepose-rs/: Cargo.toml  Makefile
rust-port/wifi-densepose-rs/crates/wifi-densepose-core/src/: types.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-mat/: Cargo.toml
rust-port/wifi-densepose-rs/crates/wifi-densepose-mat/src/: lib.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-mat/src/alerting/: dispatcher.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-mat/src/api/: dto.rs  handlers.rs  mod.rs  state.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-mat/src/detection/: breathing.rs  heartbeat.rs  mod.rs  pipeline.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-mat/src/domain/: disaster_event.rs  events.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-mat/src/integration/: csi_receiver.rs  hardware_adapter.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-nn/benches/: inference_bench.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-nn/src/: densepose.rs  tensor.rs  translator.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-server/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/wifi-densepose-server/src/: main.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-server/tests/: pose_contract.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-signal/src/: features.rs  lib.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-wasm/src/: mat.rs
rust-port/wifi-densepose-rs/examples/: pose-dashboard.html
rust-port/wifi-densepose-rs/scripts/: pose-demo.sh
(+6 files in other folders)
