[package]
name = "wifi-densepose-server"
version.workspace = true
edition.workspace = true
description = "Axum server for WiFi-DensePose MAT and pose location streaming"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
geo = "0.27"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.6", features = ["serde"] }
wifi-densepose-mat.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
